# gpt2-ivr

./: .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_REPORT.md  PRD.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/agents/: my-agent.agent.md
analysis/: token_frequency.py
scripts/: profile_imports.py  set_internal_pypi_index.ps1  set_internal_pypi_index.sh  unset_internal_pypi_index.ps1  unset_internal_pypi_index.sh
src/gpt2_ivr/: __init__.py  cli.py  constants.py  parser.py
src/gpt2_ivr/analysis/: __init__.py  bpe_corpus_export.py  candidate_selection.py  token_frequency.py
src/gpt2_ivr/commands/: __init__.py  align_command.py  analyze_command.py  base.py  distill_command.py  init_command.py  remap_command.py  select_command.py  train_command.py
src/gpt2_ivr/corpus/: __init__.py  normalize.py
src/gpt2_ivr/embedding/: __init__.py  extract.py  init_new.py  reorder.py
src/gpt2_ivr/tokenizer/: __init__.py  distill.py  init_assets.py  remap_rules.yaml
src/gpt2_ivr/training/: __init__.py  accelerate_config.yaml  sft_config.yaml  train.py
src/gpt2_ivr/utils/: logging_config.py
src/ivr/: __init__.py  cli.py
