[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-ivr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.4",
    "pyright>=1.1.408",
]

[project.scripts]
ivr = "ivr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "basic"
